--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = "^3.12"
 dependencies = [
     "django (>=5.2.8,<6.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
-    "django-cors-headers (>=4.9.0,<5.0.0)"
+    "django-cors-headers (>=4.9.0,<5.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)"
 ]
 
 
