--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,3 +19,9 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^9.0.1"
+pytest-django = "^4.11.1"
+factory-boy = "^3.3.3"
+
