--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "django (>=5.2.8,<6.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
     "django-cors-headers (>=4.9.0,<5.0.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
+    "rest-framework-simplejwt (>=0.0.2,<0.0.3)"
 ]
 
 
