--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
     "black (>=25.11.0,<26.0.0)",
     "isort (>=7.0.0,<8.0.0)",
-    "ruff (>=0.14.6,<0.15.0)"
+    "ruff (>=0.14.6,<0.15.0)",
+    "django-filter (>=25.2,<26.0)"
 ]
 
 
