--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "black (>=25.11.0,<26.0.0)",
     "isort (>=7.0.0,<8.0.0)",
     "ruff (>=0.14.6,<0.15.0)",
-    "django-filter (>=25.2,<26.0)"
+    "django-filter (>=25.2,<26.0)",
+    "phonenumbers (>=9.0.19,<10.0.0)"
 ]
 
 
