--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
     "@mantine/notifications": "^8.3.9",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "react": "^18.2.0",
