--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.66.1",
+    "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0",
     "zod": "^4.1.13"
   },
