--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "isort (>=7.0.0,<8.0.0)",
     "ruff (>=0.14.6,<0.15.0)",
     "django-filter (>=25.2,<26.0)",
-    "phonenumbers (>=9.0.19,<10.0.0)"
+    "phonenumbers (>=9.0.19,<10.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 
