sec: configuring throttling and bot prevention

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,5 +24,17 @@ COPY . .
 CMD ["sh", "-c", "\
     python manage.py migrate --no-input && \
     python manage.py collectstatic --noinput || true && \
-    gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 60 \
+    gunicorn config.wsgi:application \
+      --bind 0.0.0.0:8000 \
+      --workers ${GUNICORN_WORKERS:-4} \
+      --timeout ${GUNICORN_TIMEOUT:-30} \
+      --graceful-timeout ${GUNICORN_GRACEFUL_TIMEOUT:-30} \
+      --keep-alive 5 \
+      --worker-tmp-dir /dev/shm \
+      --max-requests 500 \
+      --max-requests-jitter 50 \
+      --limit-request-line 8190 \
+      --limit-request-field_size 8190 \
+      --access-logfile - \
+      --error-logfile - \
     "]
