--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,7 @@
+# Global (http context) rate/conn zones
+limit_req_zone $binary_remote_addr zone=frontend_req:10m rate=10r/s;
+limit_conn_zone $binary_remote_addr zone=frontend_conn:10m;
+
 server {
     listen 80;
     server_name _;
@@ -7,6 +11,9 @@ server {
 
     # SPA fallback: serve index.html for client-side routes
     location / {
+        limit_req zone=frontend_req burst=20 nodelay;
+        limit_conn frontend_conn 20;
+        if ($request_method !~ ^(GET|HEAD|OPTIONS)$) { return 405; }
         try_files $uri $uri/ /index.html;
     }
 
