--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "ruff (>=0.14.6,<0.15.0)",
     "django-filter (>=25.2,<26.0)",
     "phonenumbers (>=9.0.19,<10.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 
