prod: preparing compose for prod

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,18 @@
-services:
+﻿services:
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    volumes:
-      - ./backend:/opt/app
     env_file:
-      - ./backend/.env.dev
-    depends_on:
-      - db
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+      - ./backend/.env.prod
     ports:
-      - "8001:8000"
-
-  db:
-    image: postgres:16-alpine
-    env_file:
-      - ./backend/.env.dev
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-coletivo}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5433:5432"
+      - "8000:8000"
+    restart: unless-stopped
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "4173:80"
-
-volumes:
-  postgres_data:
+      - "3000:80"
+    restart: unless-stopped
