--- a/backend/.env.prod.example
+++ b/backend/.env.prod.example
@@ -2,6 +2,8 @@
 DJANGO_SECRET_KEY=troque-esta-chave
 DJANGO_ALLOWED_HOSTS=seu-dominio.com.br,api.seu-dominio.com.br
 CSRF_TRUSTED_ORIGINS=https://seu-dominio.com.br,https://api.seu-dominio.com.br
+CORS_ALLOW_ALL_ORIGINS=False
+CORS_ALLOWED_ORIGINS=https://seu-dominio.com.br,https://www.seu-dominio.com.br
 
 POSTGRES_DB=coletivo
 POSTGRES_USER=postgres
@@ -10,7 +12,8 @@ POSTGRES_HOST=host-do-postgres-no-dokploy
 POSTGRES_PORT=5432
 
 AUTH_COOKIE_SECURE=True
-AUTH_COOKIE_SAMESITE=Lax
+AUTH_COOKIE_SAMESITE=None
+AUTH_COOKIE_DOMAIN=.seu-dominio.com.br
 
 DRF_THROTTLE_ANON=60/min
 DRF_THROTTLE_USER=600/min
